--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "lightbox2": "^2.9.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "walk": "^2.3.9"
   }
 }
