--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "~4.15.2",
     "express-google-analytics": "^1.0.2",
     "lightbox2": "^2.9.0",
+    "mongodb": "^2.2.27",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.2",
     "walk": "^2.3.9"
   }
