--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.2",
-    "walk": "^2.3.9"
+    "walk": "^2.3.9",
+    "sha256": "^0.2.0"
   }
 }
