--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-google-analytics": "^1.0.2",
+    "helmet": "^3.6.1",
     "lightbox2": "^2.9.0",
     "mongodb": "^2.2.27",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.2",
     "sha256": "^0.2.0",
-    "walk": "^2.3.9"
+    "walk": "^2.3.9",
+    "helmet": "^3.6.1"
   }
 }
