--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.2",
     "sha256": "^0.2.0",
-    "walk": "^2.3.9",
-    "helmet": "^3.6.1"
+    "walk": "^2.3.9"
   }
 }
